--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col">
+            <div class="col-lg-4">
                 <div>
                     <div class="card">
                         <div class="card-header"><img src="img/me.jpg" ></div>
@@ -53,7 +53,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-7">
+            <div class="col-lg-8">
                 <div>
                     <div class="card">
                         <div class="card-header">
@@ -76,7 +76,7 @@
     </div>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/projects.js"></script>
 </body>
 
 </html>
