make social colored

--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
                             <div  class="skills-contact">
                                 <h1>Contact me</h1>
                                 <ul>
-                                    <li><a title="Github" href="https://github.com/abderrahmaneMustapha/" target="_blank"><i class="fab fa-github fa-3x"></i></a></li>
-                                    <li><a title="LinkedIn" href="https://www.linkedin.com/in/toumi-abderrahmane-132a7b151/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a></li>
-                                    <li><a title="Reddit" href="https://www.reddit.com/user/AbderrahamneMustapha" target="_blank"><i class="fab fa-reddit fa-3x"></i></a></li>
-                                    <li><a title="FreeCodeCamp" href="https://www.freecodecamp.org/abderrahmanemustapha" target="_blank"><i class="fab fa-free-code-camp fa-3x"></i></a></li>
-                                    <li><a  title="HackerRank" href="https://www.hackerrank.com/toumiAbderrahman" target="_blank"><i class="fab fa-hackerrank fa-3x"></i></a></li>
-                                    <li><a title="CodePen" href="https://codepen.io/AbderrahmaneMustapha/" target="_blank"><i class="fab fa-codepen fa-3x"></i></a></li>
-                                    <li><a title="Twitter" href="https://twitter.com/Abderrahmaneend" target="_blank"><i class="fab fa-twitter fa-3x"></i></a></li>
+                                    <li><a title="Github" href="https://github.com/abderrahmaneMustapha/" target="_blank"><i class="fab fa-github fa-3x"></i></a><p>Github</p></li>
+                                    <li><a title="LinkedIn" href="https://www.linkedin.com/in/toumi-abderrahmane-132a7b151/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a><p>LinkedIn</p></li>
+                                    <li><a title="Reddit" href="https://www.reddit.com/user/AbderrahamneMustapha" target="_blank"><i class="fab fa-reddit fa-3x"></i></a><p>Reddit</p></li>
+                                    <li><a title="FreeCodeCamp" href="https://www.freecodecamp.org/abderrahmanemustapha" target="_blank"><i class="fab fa-free-code-camp fa-3x"></i></a><p>FreeCodeCamp</p></li>
+                                    <li><a  title="HackerRank" href="https://www.hackerrank.com/toumiAbderrahman" target="_blank"><i class="fab fa-hackerrank fa-3x"></i></a><p>HackerRank</p></li>
+                                    <li><a title="CodePen" href="https://codepen.io/AbderrahmaneMustapha/" target="_blank"><i class="fab fa-codepen fa-3x"></i></a><p>CodePen</p></li>
+                                    <li><a title="Twitter" href="https://twitter.com/Abderrahmaneend" target="_blank"><i class="fab fa-twitter fa-3x"></i></a><p>Twitter</p></li>
                                 </ul>
                             </div>
                         </div>
