fix images not displayed correctly

--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
                         <div class="card-body">
                             <h1>Toumi Abderrahmane</h1>
                             <div>
-                                <h1>Bio</h1>
+                                <h3>Bio :</h3>
                                 <p><br>Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.<br><br></p>
                             </div>
+                            <div>
+                                <h3>Email :</h3>
+                                <p>abderrahmanemustapha030898@gmail.com</p>
+                            </div>
                             <div class="skills-contact">
-                                <h1>Skills</h1>
+                                <h3>Skills :</h3>
                                 <ul >
                                     <li><i  title="Python" class="fab fa-python fa-3x"></i><p>Python</p></li>
                                     <li><i  title="JavaScript" class="fab fa-js-square fa-3x"></i><p>JavaScript</p></li>
@@ -46,12 +50,9 @@
                                     
                                 </ul>
                             </div>
-                            <div>
-                                <h1>Email</h1>
-                                <p>abderrahmanemustapha030898@gmail.com</p>
-                            </div>
+                            
                             <div  class="skills-contact">
-                                <h1>Contact me</h1>
+                                <h3>More about me :</h3>
                                 <ul>
                                     <li><a title="Github" href="https://github.com/abderrahmaneMustapha/" target="_blank"><i class="fab fa-github fa-3x"></i></a><p>Github</p></li>
                                     <li><a title="LinkedIn" href="https://www.linkedin.com/in/toumi-abderrahmane-132a7b151/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a><p>LinkedIn</p></li>
