--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Untitled</title>
+    <meta name="description" content="Toumi Mustapha Aberrahmane a software engneering student in ibn khldoune university tiaret 
+                                      a web developer i like to use django flask and python , with some react for the front end 
+                                       im interested about data science and machine learning , i can adapt and learn fast">
+    
+                                       <meta name="keywords" content="Toumi , Mustapha, Abderrahmane , Student, Resume , Portfolio, Work , webdeveloper, website,
+                                                                      React, Django, Skills, Create, Web, Backend, Frontend, DataScience, Machine leanring, Python , JavaScript, 
+                                                                      "
+    <title>Toumi Abderrahmane Portfolio</title>
+    <link rel="shortcut icon" type="image/png" href="img/me.jpg"/>
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
