--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             </div>
                             <div>
                                 <h3>Email :</h3>
-                                <p>abderrahmanemustapha030898@gmail.com</p>
+                                <p>abdmusttoumi@gmail.com</p>
                             </div>
                             <div class="skills-contact">
                                 <h3>Skills :</h3>
