--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-lg-4">
+            <div id="side" class="col-lg-4">
                 <div>
                     <div class="card">
                         <div class="card-header"><img src="img/me.jpg" ></div>
@@ -76,7 +76,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-8">
+            <div id="main"class="col-lg-8">
                 <div>
                     <div class="card">
                         <div class="card-header">
