skills card design

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
                     <div class="card">
                         <div class="card-header">
                             <ul class="nav nav-tabs card-header-tabs">
-                                <li class="nav-item"><a  href="#projects"  data-toggle="projects" class="nav-link active" >Projects</a></li>
-                                <li class="nav-item"><a  href="#skills"     data-toggle="skills" class="nav-link" >Skills</a></li>
-                                <li class="nav-item"><a   href="#experience"   data-toggle="experience"   class="nav-link"  >Experience</a></li>
+                                <li class="nav-item"><a  href="#projects"   data-toggle="projects"   class="nav-link active" >Projects</a></li>
+                                <li class="nav-item"><a  href="#skills"     data-toggle="skills"     class="nav-link" >Skills</a></li>
+                                <li class="nav-item"><a  href="#experience" data-toggle="experience" class="nav-link"  >Experience</a></li>
                             </ul>
                         </div>
                         <div class="card-body">
@@ -95,7 +95,7 @@
                             </div>                          
                            
                             <div id="skills" class="row hide">
-                               nananananananana
+                            
                             </div>    
                             <div id="experience" class="row hide">
                                 zdnazdknaz
@@ -113,6 +113,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/projects.js"></script>
     <script src="js/nav.js"></script>
+    <script src="js/skills.js"></script>
    
 </body>
 
