--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <h1>Toumi Abderrahmane</h1>
                             <div>
                                 <h3>Bio :</h3>
-                                <p><br>A software engneering student and a webdeveloper interested in data science and machine learning <br><br></p>
+                                <p><br>im a software engineering student , i like to use django , react , javascript and python to create websites, currently im taking some courses about PWA<br><br></p>
                             </div>
                             <div>
                                 <h3>Email :</h3>
